--- a/bbb-provider/bbb-user-service/src/main/resources/static/public/login.html
+++ b/bbb-provider/bbb-user-service/src/main/resources/static/public/login.html
@@ -10,49 +10,20 @@
 <script src="http://localhost:8080/public/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div id="app">
+	<div >
+		<form method="get" action="http://localhost:8801/login">
 		<div class="form-group">
-			<label for="exampleInputEmail1">Phone</label> <input type="email"
-				class="form-control" id="exampleInputEmail1" ref="username"
-				placeholder="CellPhone">
+			<label >Phone</label> <input type="text"
+				class="form-control"  name="username"
+				placeholder="username">
 		</div>
 		<div class="form-group">
-			<label for="exampleInputPassword1">Password</label> <input
-				type="password" class="form-control" id="exampleInputPassword1"
-				ref="password" placeholder="Password">
+			<label >Password</label> <input
+				type="password" class="form-control"
+				name="password" placeholder="Password">
 		</div>
-		<div class="alert alert-warning" role="alert">{{ message }}</div>
-		<button type="submit" class="btn btn-default" v-on:click="invokeLogin">Login</button>
-		<button type="button" class="btn btn-default"
-			v-on:click="invokeSignup">Free Signup!</button>
+		<input type="submit" class="btn btn-default" >Login</input>
+		</form>
 	</div>
-	<script type="text/javascript">
-		var app = new Vue({
-			el : '#app',
-			data : {
-				message : 'Hello Vue!'
-			},
-			methods : {
-				invokeLogin : function() {
-					// 等同于jquery的$.ajax
-					this.$http.post('http://localhost:8080/user/login', {
-						username : this.$refs.username.value,
-						password : this.$refs.password.value
-					}, {
-						emulateJSON : true
-					}).then(function(res) {
-						this.message = res.body.respMsg
-						console.log(res.body.respMsg)
-					}, function(res) {
-						console.log(res.body.respData);
-					})
-				},
-				invokeSignup : function() {
-					alert(12123123);
-				}
-
-			}
-		})
-	</script>
 </body>
 </html>
