--- a/bbb-common/bbb-common-security-server/src/main/resources/static/public/login.html
+++ b/bbb-common/bbb-common-security-server/src/main/resources/static/public/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <form method="post" action="http://localhost:8801/login">
+    <form method="post" action="http://localhost:8801/process">
         <div class="form-group">
             <label>Phone</label> <input type="text"
                                         class="form-control" name="username"
